# booktyping

./: .gitignore  Cargo.toml  README.md  default.nix  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: ci.yml  deploy-github-pages.yml
booktyping/: Cargo.toml  README.md
booktyping-core/: Cargo.toml
booktyping-core/src/: app.rs  config.rs  handler.rs  lib.rs  ui.rs
booktyping-web/: Cargo.toml
booktyping-web/src/: app.rs  main.rs  terminal.rs
booktyping/src/: event.rs  file_sys.rs  main.rs
docs/: ARCHITECTURE.md
src/: main.rs
tests/integration/: main.rs
