[workspace]
members = [
	"booktyping",
	#"booktyping-*",
	"booktyping-core",
]
resolver = "2"

[workspace.package]
authors = ["Jesse Slater <jsssltr@gmail.com>"]
edition = "2021"
description = "Practice typing while reading"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/valeratrades/booktyping"

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"

[workspace.dependencies]
anyhow = "1.0.91"
clap = { version = "^4.5.20", features = ["derive"] }
v_utils = { version = "1.7.8", default-features = false, features = ["io", "macros"] }
dirs = "^5.0.1"
ratatui = { version = "^0.29.0", default-features = false, features = ["crossterm"]}
regex = "^1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.132"
chrono = { version = "^0.4.38", features = ["serde"] }
deunicode = "^1.6.0"
