[package]
name = "booktyping-core"
version = "0.1.2"
authors = ["Jesse Slater <jsssltr@gmail.com>"]
edition = "2021"
description = "Practice typing while reading"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/valeratrades/booktyping"


[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

[dependencies]
config = "0.14.0"
v_utils = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
deunicode = { workspace = true }
