[package]
name = "booktyping"
version = "0.1.0"
authors = ["Jesse Slater <jsssltr@gmail.com>"]
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

[dev-dependencies]
booktyping-core = { path = "../booktyping-core" }

[dependencies]
booktyping-core = "0.1.0"
crossterm = { version = "0.27.0", features = ["windows"] }
v_utils = { version = "1.3.7", features = ["io"] }
clap = { version = "4.5.4", features = ["derive"] }
ratatui = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
deunicode = { workspace = true }
