[package]
name = "booktyping"
version = "0.1.1"
authors = ["Jesse Slater <jsssltr@gmail.com>"]
edition = "2021"
description = "Practice typing while reading"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/valeratrades/booktyping"


[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

[dependencies]
booktyping-core = { path = "../booktyping-core", version = "^0" }
crossterm = { version = "0.27.0", features = ["windows"] }
clap = { version = "4.5.4", features = ["derive"] }
v_utils = { workspace = true}
derive-new = "0.6.0"
ratatui = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
deunicode = { workspace = true }
